<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/result_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#1C2035"
    android:gravity="center_horizontal"
    android:orientation="vertical">


    <FrameLayout
        android:id="@+id/image_overlay"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="10dp"
        android:layout_weight="1"
        android:gravity="top">

        <ImageView
            android:id="@+id/image_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:contentDescription="@string/image_view"
            android:scaleType="fitCenter"
            android:src="@drawable/image_placeholder" />
    </FrameLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:text="@string/result_title"
        android:textColor="#ffffff"
        android:textSize="25sp"
        android:textStyle="bold" />

    <RelativeLayout
        android:id="@+id/loading_panel"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="10dp"
        android:layout_weight="1.8"
        android:background="@drawable/card_solid">

        <ProgressBar
            android:id="@+id/loading_anim"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_centerVertical="false"
            android:indeterminate="true"
            android:indeterminateTint="#03A9F4"
            android:progressTint="#03A9F4" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:scrollbarThumbVertical="@android:color/white">

            <EditText
                android:id="@+id/ocr_result"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:inputType="text|textMultiLine"
                android:textColor="#E3E3E3" />
        </ScrollView>
    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="#03A9F4" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="25dp"
        android:layout_marginVertical="10dp"
        android:layout_weight="0"
        android:gravity="bottom|center">


        <Button
            android:id="@+id/recapture_btn"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:contentDescription="@string/translate_button"
            android:drawableTop="@drawable/capture_24"
            android:drawableTint="#D5D5D5"
            android:text="Capture again"
            android:textColor="#03A9F4"
            android:textSize="10sp" />

        <Button
            android:id="@+id/clipboard_btn"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:contentDescription="@string/clipboard_button"
            android:drawableTop="@drawable/clipboard_24"
            android:drawableTint="#D5D5D5"
            android:text="Copy"
            android:textColor="#03A9F4"
            android:textSize="10sp" />

        <Button
            android:id="@+id/share_btn"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:contentDescription="@string/share_button"
            android:drawableTop="@drawable/share_24"
            android:drawableTint="#D5D5D5"
            android:text="@string/share"
            android:textColor="#03A9F4"
            android:textSize="10sp"
            android:visibility="gone" />

    </LinearLayout>

</LinearLayout>